# corne-eec-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
eck-rs/: Cargo.toml
eck-rs/src/: analog.rs  error.rs  event.rs  lib.rs  mux.rs  scanner.rs
nrf/: Cargo.toml
nrf/.cargo/: config.toml
nrf/src/: analog.rs  calibration.rs  config.rs  event.rs  hid.rs  layers.rs  main.rs
src/: analog.rs  debounce.rs  error.rs  lib.rs  mux.rs  scanner.rs
stm32g0/: Cargo.toml
stm32g0/.cargo/: config.toml  probe_run.sh
stm32g0/script/: probe_run.zsh
stm32g0/src/: analog.rs  comm.rs  config.rs  event_channel.rs  hid.rs  layers.rs  main.rs
stm32g4/: Cargo.toml  rust-toolchain.toml
stm32g4/.cargo/: config.toml
stm32g4/src/: analog.rs  comm.rs  config.rs  event_channel.rs  hid.rs  layers.rs  main.rs
