[package]
name    = "eck-rs"
version = "0.1.0"
edition      = "2021"
license      = "MIT"

[dependencies]
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
keyberon = { git="https://github.com/TeXitoi/keyberon", rev="24bd53f" }
heapless = "0.7.16"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"], optional = true}
defmt = "0.3.4"
