[package]
edition = "2021"
name = "corne-eec-stm32g4"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[features]
nightly = ["embassy-executor/nightly", "embedded-io/async"]
# default = ["log-noop", "nightly"]
default = ["debugger", "nightly"]
debugger = ["panic-probe", "defmt-rtt", "defmt"]
release = ["nightly", "panic-reset", "log-noop"]
log-noop = []

[dependencies]
embedded-hal = { version = "0.2.7", features = ["unproven"] }
eck-rs = {path = "../eck-rs", features = ["cortex-m"]}
embassy-futures = { version = "0.1.0"}
embassy-sync = { version = "0.2.0", features = ["defmt"] }
embassy-executor = { version = "0.2.0", features=["nightly", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"]}
embassy-time = { version = "0.1.2",  features = ["defmt", "defmt-timestamp-uptime", ] }
embassy-stm32 = { path = "./vendor/embassy/embassy-stm32", features = ["nightly", "defmt", "unstable-pac", "stm32g431kb", "time-driver-any", "exti", "unstable-traits", "memory-x"]  }
embassy-usb = {  version = "0.1.0", path = "./vendor/embassy/embassy-usb", features = ["defmt"]}
defmt = { version = "0.3", optional = true }
defmt-rtt = { version = "0.4", optional = true }
embedded-io = "0.4.0"
static_cell = "1.1"
keyberon = { git="https://github.com/TeXitoi/keyberon", rev="24bd53f" }
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.2"
panic-probe = { version = "0.3.1", features = ["print-defmt"], optional = true }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
rand = { version = "0.8.4", default-features = false }
embedded-storage = "0.3.0"
usbd-hid = "0.6.0"
serde = { version = "1.0.136", default-features = false }
panic-reset = { version = "0.1.1", optional = true }
once_cell = {version ="1.17.2", default-features = false, features=["race", "atomic-polyfill"]}
nb = "1.1.0"
heapless = "0.7.16"
postcard = "1.0.5"
paste = "1.0.14"
