[package]
edition = "2021"
name = "corne-eec-stm32g4"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[features]
nightly = ["embassy-executor/nightly", "embedded-io/async"]
# default = ["log-noop", "nightly"]
default = ["debugger", "nightly"]
debugger = ["panic-probe", "defmt-rtt", "defmt"]
release = ["nightly", "panic-reset", "log-noop"]
log-noop = []

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.2"
defmt = { version = "0.3", optional = true }
defmt-rtt = { version = "0.4", optional = true }
eck-rs = { path = "../eck-rs", features = ["cortex-m"] }
embassy-executor = { version = "0.2.0", features = ["nightly", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-futures = { version = "0.1.0" }
embassy-stm32 = { path = "./vendor/embassy/embassy-stm32", features = ["nightly", "defmt", "unstable-pac", "stm32g431kb", "time-driver-any", "exti", "unstable-traits", "memory-x"] }
embassy-sync = { version = "0.2.0", features = ["defmt"] }
embassy-time = { version = "0.1.2", features = ["defmt", "defmt-timestamp-uptime", ] }
embassy-usb = { version = "0.1.0", path = "./vendor/embassy/embassy-usb", features = ["defmt"] }
embedded-hal = { version = "0.2.7", features = ["unproven"] }
embedded-io = "0.4.0"
embedded-storage = "0.3.0"
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = "0.7.16"
keyberon = { git = "https://github.com/TeXitoi/keyberon", rev = "24bd53f" }
nb = "1.1.0"
once_cell = { version = "1.17.2", default-features = false, features = ["race", "atomic-polyfill"] }
panic-probe = { version = "0.3.1", features = ["print-defmt"], optional = true }
panic-reset = { version = "0.1.1", optional = true }
paste = "1.0.14"
postcard = "1.0.5"
rand = { version = "0.8.4", default-features = false }
serde = { version = "1.0.136", default-features = false }
static_cell = "1.1"
usbd-hid = "0.6.0"
