[package]
edition = "2021"
name = "corne-eec-stm32g4"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[features]
nightly = ["embassy-executor/nightly", "embedded-io/async"]
# default = ["log-noop", "nightly"]
default = ["debugger", "nightly"]
debugger = ["panic-probe", "defmt-rtt", "defmt"]
release = ["nightly", "panic-reset", "log-noop"]
log-noop = []

[dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.2"
defmt = { version = "0.3", optional = true }
defmt-rtt = { version = "0.4", optional = true }
eck-rs = { path = "../eck-rs", features = ["cortex-m"] }

embassy-executor = { git = "https://github.com/embassy-rs/embassy",rev = "715b6d5", version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-futures = {  git = "https://github.com/embassy-rs/embassy",rev = "715b6d5", version = "0.1.0" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy",rev = "715b6d5", features = ["defmt", "unstable-pac", "stm32g431kb", "time-driver-any", "exti",  "memory-x"] }
embassy-sync = {  git = "https://github.com/embassy-rs/embassy",rev = "715b6d5", version = "0.5.0", features = ["defmt"] }
embassy-time = {  git = "https://github.com/embassy-rs/embassy",rev = "715b6d5", version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy",rev = "715b6d5", features = ["defmt"] }
embedded-io = "0.4.0"
embedded-storage = "0.3.0"
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
keyberon = { git = "https://github.com/TeXitoi/keyberon", rev = "24bd53f" }
nb = "1.1.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"], optional = true }
panic-reset = { version = "0.1.1", optional = true }
static_cell = "1.1"
usbd-hid = "0.7.0"
paste = "1.0.14"

